--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div>
                 <img src="./assets/imgs/honey.jpg" alt="productImg">
                 <legend>
-                    <span class="info">
+                    <span>
                         <h4>100% Bio Honey</h4>
                         <p>Italian, not treated</p>
                     </span>
@@ -35,7 +35,7 @@
             <div>
                 <img src="./assets/imgs/honey.jpg" alt="productImg">
                 <legend>
-                    <span class="info">
+                    <span>
                         <h4>100% Bio Honey</h4>
                         <p>Italian, not treated</p>
                     </span>
@@ -45,7 +45,7 @@
             <div>
                 <img src="./assets/imgs/honey.jpg" alt="productImg">
                 <legend>
-                    <span class="info">
+                    <span>
                         <h4>100% Bio Honey</h4>
                         <p>Italian, not treated</p>
                     </span>
@@ -55,7 +55,7 @@
             <div>
                 <img src="./assets/imgs/honey.jpg" alt="productImg">
                 <legend>
-                    <span class="info">
+                    <span>
                         <h4>100% Bio Honey</h4>
                         <p>Italian, not treated</p>
                     </span>
